assert-struct/tests/snapshots/nested__deeply_nested_comparison_failure.snap
---
source: assert-struct/tests/nested.rs
expression: message
---
assert_struct! failed:

   | Company { ... CompanyLocation { ... Office {
mismatch:
  --> `company.location.office.floor` (line 41)
   |     floor: > 10,
   |            ^^^^ actual: 5
   | } ... } ... }
