assert-struct/tests/snapshots/nested__deeply_nested_greater_equal.snap
---
source: assert-struct/tests/nested.rs
expression: message
---
assert_struct! failed:

   | Game { ... Player { ... Score {
mismatch:
  --> `game.player.score.points` (line 38)
   |     points: >= 100,
   |             ^^^^^^ actual: 80
   | } ... } ... }
