assert-struct/tests/snapshots/nested__deeply_nested_less_than.snap
---
source: assert-struct/tests/nested.rs
expression: message
---
assert_struct! failed:

   | Pod { ... Container { ... Metrics {
comparison mismatch:
  --> `pod.container.metrics.cpu_usage` (line 38)
   | < 50.0
   | ^^^^^^ actual: 75.5
   | } ... } ... }
