assert-struct/tests/snapshots/nested__deeply_nested_not_equal_pattern.snap
---
source: assert-struct/tests/nested.rs
expression: message
---
assert_struct! failed:

   | Application { ... Service { ... Config {
comparison mismatch:
  --> `app.service.config.timeout` (line 38)
   | != 30
   | ^^^^^ actual: 30
   | } ... } ... }
