assert-struct/tests/snapshots/nested__deeply_nested_option_pattern.snap
---
source: assert-struct/tests/nested.rs
expression: message
---
assert_struct! failed:

   | Deployment { ... Environment { ... Settings {
mismatch:
  --> `deploy.env.settings.debug.Some` (line 38)
   |     Some: true,
   |           ^^^^ actual: false
   | } ... } ... }
