assert-struct/tests/snapshots/nested__deeply_nested_range_failure.snap
---
source: assert-struct/tests/nested.rs
expression: message
---
assert_struct! failed:

   | Company { ... CompanyLocation { ... Office {
mismatch:
  --> `company.location.office.rooms` (line 41)
   | 10 ..= 20
   | ^^^^^^^^^ actual: 5
   | } ... } ... }
