assert-struct/tests/snapshots/nested__deeply_nested_regex_pattern.snap
---
source: assert-struct/tests/nested.rs
expression: message
---
assert_struct! failed:

   | Customer { ... Contact { ... Validation {
mismatch:
  --> `customer.contact.validation.email` (line 39)
   | =~ r".*@company\.com$"
   | ^^^^^^^^^^^^^^^^^^^^^^ actual: "john@example.com"
   | } ... } ... }
