assert-struct/tests/snapshots/nested__deeply_nested_slice_pattern.snap
---
source: assert-struct/tests/nested.rs
expression: message
---
assert_struct! failed:

   | Report { ... Analysis {
value mismatch:
  --> `report.analysis.data.values.[1]` (line 38)
   |             values: &[10, 25, 30],
   | } ... }
