assert-struct/tests/snapshots/nested__nested_comparison.snap
---
source: assert-struct/tests/nested.rs
expression: message
---
assert_struct! failed:
expected 17 to match >= 18
